add-recommendations implemetation